# stm32g0-template

./: .gitmodules  Dockerfile  README.rst  build.sh  debug.sh  flash.sh  reset.sh  serial.sh
output/: stm32-template.elf
project/: CMakeLists.txt
project/src/: main.c  main.h  stm32g0xx_hal_msp.c  stm32g0xx_it.c
project/src/bsp/: pin.c  pin.h
project/src/func/: cmds.h  cmds.re.c
project/src/io/: clock.c  clock.h  dmx.c  dmx.h  gpio.c  gpio.h  oneshot_timer.c  oneshot_timer.h  pin.c  pin.h  uart.c  uart.h
project/src/prpc/: cmds.c  cmds.h  lex.h  lex.re.c  msg.c  msg.h  parse.c  parse.h  types.h
scripts/: build.sh  debug.sh
